kubernetes/worker.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - env:
        - name: VERSION
          value: 1.0.5
        image: yerachw/inet-worker:latest
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - celery -A common.tasks.create_celery.celery status | grep -q OK
          initialDelaySeconds: 60
          periodSeconds: 60
        name: worker
      imagePullSecrets:
      - name: regcred
      nodeSelector:
        target: worker
