kubernetes/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        name: mysql
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.6
        volumeMounts:
          - mountPath:  /var/lib/mysql
            name: mysql-persistent-storage
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
            claimName: mysql-data      
      nodeSelector:
        target: mysql
