kubernetes/socket.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: socket
  sessionAffinity: ClientIP
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: socket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket
  template:
    metadata:
      labels:
        app: socket
    spec:
      containers:
      - image: yerachw/websocket:latest
        name: socket
        ports:
        - containerPort: 8000
      nodeSelector:
        target: web
