kubernetes/ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
    rules:
    - host: inet-staging.dvaultsol.com
      http:
        paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 5000
    tls:
    - hosts:
      - inet-staging.dvaultsol.com
      secretName: inet
